--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "helmet": "^3.12.1",
     "joi": "^13.3.0",
     "mongoose": "^5.1.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "validator": "^10.3.0"
   },
   "devDependencies": {
