--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "joi": "^13.3.0",
     "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.1.4",
+    "mongoose-unique-validator": "^2.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "session": "^0.1.0",
+    "slug": "^0.9.1",
     "validator": "^10.3.0"
   },
   "devDependencies": {
