--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.15.6",
     "express-validation": "^1.0.2",
     "helmet": "^3.12.1",
+    "http-status": "^1.1.2",
     "joi": "^13.3.0",
     "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.1.4",
